examples/errors/invalid_return2.spl
foo(a) {
    if (a) { return 3;} else { print(!a);} 
}

main() {return;}